--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == README
 
-A rails app that stores and displays RSS feeds with angular for the main apps front end.
+A rails app that stores and displays RSS feeds with angular.js for the main apps front end.
